trunk/Archive2/22/c496def0c4fc76/output
main.cpp:10:9: error: use of undeclared identifier 'foo'
int a = foo();
        ^
1 error generated.
